syntax = "proto3";

package greet;

service GreetService {

    //Unary API
    rpc Greet (GreetRequest) returns (GreetResponse) {};

    // Server Streaming API
    rpc SendMultipleGreetings (GreetRequest) returns (stream SendManyGreetingsResponse);

    // Client Streaming API
    rpc ReceiveMultipleGreetings (stream GreetRequest) returns (GreetResponse);

}



// For streaming server
message SendManyGreetingsResponse{
    string result=1;
}

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
     Greeting greeting = 1;
}

message GreetResponse {
     string result = 1;
}


